# telescope

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  airflow_debug_report.py  airflow_report.pyz  checklist.py  config.yaml  coordinator.py  hosts.yaml  index.html  input.yaml  justfile  localhost.yaml  mkdocs.yml  pyproject.toml  report.yaml  requirements.txt  sample_hosts.yaml  setup.py  sitemap.xml  telescope-1.1.4-py3-none-any.whl  telescope-1.2.0-py3-none-any.whl  test.py  transformers.py
.github/: labels.yml
.github/workflows/: aeroscope.yaml  build.yml  checks.yml  cicd.yml  deploy.yml  labeler.yml  precommit.yaml  publish.yml  test.yml
CLI/: index.html
aeroscope/: Makefile  README.md  pyproject.toml
aeroscope/astronomer/aeroscope/: operators.py  util.py
aeroscope/astronomer/aeroscope/plugins/: __init__.py
aeroscope/astronomer/aeroscope/plugins/templates/: main.html
airflow_report/: __main__.py  requirements.txt
astronomer_telescope/: __init__.py  __main__.py  config.py  getter_util.py
astronomer_telescope/functions/: astronomer_enterprise.py  autodiscover.py  cluster_info.py
astronomer_telescope/getters/: __init__.py  docker.py  kubernetes.py  local.py  ssh.py
docker/: README.md
docs/: CLI.md  index.md  install.md  output.md
install/: index.html
output/: index.html  report_output.xlsx
plugins/: README.md  aeroscope.py
plugins/templates/: main.html
search/: search_index.json
telescope/: __init__.py  __main__.py  airflow_report.py  config.py  config.yaml  coordinator.py  getter_util.py  getters.py  report_summary.txt  reports.py  reports_util.py  upload.py  util.py
telescope/data/: config.yaml
telescope/functions/: astronomer_enterprise.py  autodiscover.py  cluster_info.py
telescope/getters/: __init__.py  docker.py  docker_client.py  kubernetes.py  kubernetes_client.py  local.py  ssh.py
telescope/reporters/: __init__.py  charts.py  report.html.jinja2  report.py
tests/: conftest.py  test___main__.py  test_airflow_report.py  test_functions.py  test_util.py  validation_test.py
tests/airflow_report/: airflow_report_test.py  test_airflow_report.py
tests/astronomer_telescope/: __main__test.py  test_util.py  util_test.py
tests/reporters/: test___init__.py  test_report.py
tests/resources/: .gitignore  example-dag.py  report.json  slowtest_dev.sh
tests/scripts/: slowtest_dev.sh  slowtest_dev_with_charts.sh  slowtest_dev_without_charts.sh
tests/telescope/: test___main__.py  test_util.py
tests/telescope/reporters/: test___init__.py
