# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "telescope"
version = "2.0.3"
description = "A tool to observe distant (or local!) Airflow installations, and gather metadata or other required data."
readme = "README.md"
authors = ["telescope <solutions@astronomer.io>"]
repository = "https://github.com/telescope/telescope"
homepage = "https://github.com/telescope/telescope"

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"telescope" = "telescope.__main__:cli"

[tool.poetry.dependencies]
python = ">=3.6.2,<3.11"
importlib_metadata = { version = "^4.5.0", python = "<3.8" }
rich = "^11.1.0"
kubernetes = "^21.7"
fabric = "^2.6.0"
docker = "^5.0.3"
invoke = "^1.6.0"
PyYAML = "^6.0"
click = "^8.0.3"
lazyimport = "^0.0.4"
halo = "^0.0.31"
retrying = "^1.3.3"

[tool.poetry.dev-dependencies]
black = {version = "^21.7b0", allow-prereleases = true}
isort = {extras = ["colors"], version = "^5.9.3"}
pre-commit = "^2.14.0"
pydocstyle = "^6.1.1"
pylint = "^2.10.2"
pytest = "^6.2.4"
pyupgrade = "^2.24.0"
safety = "^1.10.3"
pytest-integration = "^0.2.2"
pytest-mock = "^3.6.1"
apache-airflow = "^2.2.1"
pytest-xdist = {extras = ["psutil"], version = "^2.4.0"}
pyinstaller = "^4.10"

[tool.black]
# https://github.com/psf/black
target-version = ["py38"]
line-length = 120
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
    | tests/
    | airflow_report/__main__.py
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 38
line_length = 120

known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["tests/resources/", "hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__", "telescope/reporters"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--ignore=tests/resources/example-dag.py",
  "--ignore=resources/fix.py",
  "--strict-markers",
  "--tb=short",
  "--disable-warnings",
  "--numprocesses=auto",
  "--no-header",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]
