[tool.poetry]
name = "astronomer-aeroscope"
version = "0.9.0"
description = "An Airflow Plugin and Operator for alternative methods of running Telescope"
authors = ["telescope <cse@astronomer.io>"]
license = "Proprietary"
readme = "README.md"
packages = [{include = "astronomer"}]

[tool.poetry.dependencies]
python = ">=3"

# dynamically add plugin to Airflow Plugins
[tool.poetry.plugins] # Optional super table
[tool.poetry.plugins."airflow.plugins"]
"aeroscope" = "astronomer.aeroscope.plugins:AeroscopePlugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
